Content formatting changes

--- a/_posts/2022-12-23-about.md
+++ b/_posts/2022-12-23-about.md
@@ -1,10 +1,10 @@
 ---
 layout: post
-title: Resume
-date: December 25, 2022
-description: Short description
+title: About
+date: 2022-12-22
+description: More about me
+permalink: /about/
 ---
-{% capture site.description %}<a href="">Download Here</a>{% endcapture %} 
 
 <!-- <span class="image featured"><img src="images/pic01.jpg" alt="" /></span> -->
 
