--- a/_posts/2022-12-23-contact.md
+++ b/_posts/2022-12-23-contact.md
@@ -1,11 +1,11 @@
 ---
 layout: post
 title: Contact Info
-description: How to reach out to me!
-date: 
+description: How to reach out to me
+date: 2022-12-23
+permalink: /contact/
 ---
 
 Email me at {{site.email}}, or connect with me though the websites below. 
-
 
 
