--- a/_posts/2022-12-23-resume.md
+++ b/_posts/2022-12-23-resume.md
@@ -1,8 +1,9 @@
 ---
 layout: post
-title: About Me
-date: December 25, 2022
-description: A short description
+title: Resume
+date: 2022-12-23
+description: My work experience
+permalink: /resume/
 ---
 
 <!-- <span class="image featured"><img src="images/pic01.jpg" alt="" /></span> -->
