--- a/_posts/2022-12-23-contact.md
+++ b/_posts/2022-12-23-contact.md
@@ -6,6 +6,8 @@ date: 2022-12-23
 permalink: /contact/
 ---
 
-Email me at {{site.email}}, or connect with me though the websites below. 
+Email me at {{site.email}} or connect with me though the websites below. 
+
+LinkedIn: [https://www.linkedin.com/in/michaeljhoffer/](https://www.linkedin.com/in/michaeljhoffer/)
 
 
