--- a/_posts/2022-12-23-about.md
+++ b/_posts/2022-12-23-about.md
@@ -8,6 +8,14 @@ permalink: /about/
 
 <!-- <span class="image featured"><img src="images/pic01.jpg" alt="" /></span> -->
 
-Mauris neque quam, fermentum ut nisl vitae, convallis maximus nisl. Sed mattis nunc id lorem euismod placerat. Vivamus porttitor magna enim, ac accumsan tortor cursus at. Phasellus sed ultricies mi non congue ullam corper. Praesent tincidunt sed tellus ut rutrum. Sed vitae justo condimentum, porta lectus vitae, ultricies congue gravida diam non fringilla.
+I am a graduate of The Ohio State University where Michael earned a Bachelor of Science in Business Administration with a specialization in Marketing and a minor in Psychology. On academic merit, Michael was directly admitted to the Fisher College of Business where Michael pursued a challenging academic curriculum as an Honors Student.
 
-Nunc quis dui scelerisque, scelerisque urna ut, dapibus orci. Sed vitae condimentum lectus, ut imperdiet quam. Maecenas in justo ut nulla aliquam sodales vel at ligula. Sed blandit diam odio, sed fringilla lectus molestie sit amet. Praesent eu tortor viverra lorem mattis pulvinar feugiat in turpis. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Fusce ullamcorper tellus sit amet mattis dignissim. Phasellus ut metus ligula. Curabitur nec leo turpis. Ut gravida purus quis erat pretium, sed pellentesque massa elementum. Fusce vestibulum porta augue, at mattis justo. Integer sed sapien fringilla, dapibus risus id, faucibus ante. Pellentesque mattis nunc sit amet tortor pellentesque, non placerat neque viverra.
+This past summer, Michael was excited to work as the Business Strategy intern at Luxottica. However, due to the unfortunate circumstances of the COVID-19 outbreak, the internship program was cancelled. Despite this set back Michael volunteered as a marketing intern for a non-profit that is very close to my heart: Grant Us Hope. GUH is a suicide prevention non-profit in Cincinnati that specializes in the implementation of mental health support programs within local area schools.
+
+At Ohio State, Michael worked as the sole Marketing Intern for Fisher’s Master of Business Logistics Engineering Program. In this role, Michael performed extensive market research in addition to managing the program’s social media presence across multiple platforms. Outside of the classroom, Michael held leadership positions in both my business fraternity, Delta Sigma Pi (DSP), and my social fraternity, Sigma Alpha Epsilon (SAE).
+
+During the summer of 2019, Michael had the opportunity to work as the International Marketing intern for The J.M. Smucker Company in Orrville, OH. My summer with Smucker was both enriching and enjoyable, as Michael was able to gain exposure to marketing iconic brands within the consumer-packaged goods industry through an international lens.
+
+Post-graduation, Michael have been overjoyed to continue my time at Smucker as Michael am now building my marketing abilities as a Brand Analyst! Michael proudly support a brand family worth over a billion dollars, through data analytics and brand marketing, made up of Jif, Smucker’s, Santa Cruz Organic, Goober, Adams, and Laura Scudder Peanut Butters as well as Sahale Snacks. Through this experience, Michael have been sharpening my skills in story-telling with data, supporting worldwide brands, and delivering breakthrough marketing tactics within the CPG industry. Michael proficiently analyze a variety of data inputs such as point of sale, panel, retailer data, and macro trends in order to further drive the business as we focus on building brands that consumers love. 
+
+Check out [Smucker’s latest recognition](https://www.fastcompany.com/90724372/most-innovative-companies-branding-2022?utm_campaign=PostBeyond&utm_source=LinkedIn&utm_medium=%23394258&utm_term=Smucker+Named+One+of+Fast+Companys+Most+Innovative+Companies+of+2022) for Jif’s cutting edge marketing communication! 
