--- a/_posts/2022-12-23-about.md
+++ b/_posts/2022-12-23-about.md
@@ -2,7 +2,7 @@
 layout: post
 title: About
 date: 2022-12-22
-description: More about me
+description: More about Michael
 permalink: /about/
 ---
 
