--- a/_posts/2022-12-23-contact.md
+++ b/_posts/2022-12-23-contact.md
@@ -1,12 +1,12 @@
 ---
 layout: post
 title: Contact Info
-description: How to reach out to me
+description: How to reach Michael
 date: 2022-12-23
 permalink: /contact/
 ---
 
-Email me at {{site.email}} or connect with me though the websites below. 
+[Email me](mailtto:{{site.email}}) or connect with me though the websites below. 
 
 LinkedIn: [https://www.linkedin.com/in/michaeljhoffer/](https://www.linkedin.com/in/michaeljhoffer/)
 
