--- a/_posts/2022-12-23-resume.md
+++ b/_posts/2022-12-23-resume.md
@@ -2,12 +2,12 @@
 layout: post
 title: Resume
 date: 2022-12-23
-description: My work experience
+description: Michael's Work Experience
 permalink: /resume/
 ---
 
 <!-- <span class="image featured"><img src="images/pic01.jpg" alt="" /></span> -->
 
-Mauris neque quam, fermentum ut nisl vitae, convallis maximus nisl. Sed mattis nunc id lorem euismod placerat. Vivamus porttitor magna enim, ac accumsan tortor cursus at. Phasellus sed ultricies mi non congue ullam corper. Praesent tincidunt sed tellus ut rutrum. Sed vitae justo condimentum, porta lectus vitae, ultricies congue gravida diam non fringilla.
+Contact me or connect with me on LinkedIn for the most up-to-date version of my resume. 
 
-Nunc quis dui scelerisque, scelerisque urna ut, dapibus orci. Sed vitae condimentum lectus, ut imperdiet quam. Maecenas in justo ut nulla aliquam sodales vel at ligula. Sed blandit diam odio, sed fringilla lectus molestie sit amet. Praesent eu tortor viverra lorem mattis pulvinar feugiat in turpis. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Fusce ullamcorper tellus sit amet mattis dignissim. Phasellus ut metus ligula. Curabitur nec leo turpis. Ut gravida purus quis erat pretium, sed pellentesque massa elementum. Fusce vestibulum porta augue, at mattis justo. Integer sed sapien fringilla, dapibus risus id, faucibus ante. Pellentesque mattis nunc sit amet tortor pellentesque, non placerat neque viverra.
+<!-- <iframe src="https://michaelhoffer.net/assets/documents/Resume%20of%20Michael%20Hoffer%20Spring%202021.pdf" width="100%" height="900"> </iframe>  -->
