--- a/_posts/2022-12-23-resume.md
+++ b/_posts/2022-12-23-resume.md
@@ -10,4 +10,4 @@ permalink: /resume/
 
 Contact me or connect with me on LinkedIn for the most up-to-date version of my resume. 
 
-<!-- <iframe src="https://michaelhoffer.net/assets/documents/Resume%20of%20Michael%20Hoffer%20Spring%202021.pdf" width="100%" height="900"> </iframe>  -->
+<iframe src="https://michaelhoffer.net/assets/documents/Resume_of_Michael_Hoffer_Spring_2021.pdf" width="100%" height="900"> </iframe> 
